[package]
name = "rsa"
version = "0.3.0"
authors = ["RustCrypto Developers", "dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2018"
description = "Pure Rust RSA implementation"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rsa"
repository = "https://github.com/RustCrypto/RSA"
keywords = ["rsa", "encryption", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
num-bigint = { package = "num-bigint-dig", version = "0.6", features = ["rand", "i128", "u64_digit", "prime", "zeroize"], git = "https://github.com/mesalock-linux/num-bigint-sgx", branch = "dig" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
num-integer = { git = "https://github.com/mesalock-linux/num-integer-sgx" }
num-iter = {git = "https://github.com/mesalock-linux/num-iter-sgx" }
lazy_static = { version = "1.3.0", default-features = false, features = ["spin_no_std"] }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.2" }
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx" }
subtle = { git = "https://github.com/mesalock-linux/subtle-sgx" }
simple_asn1 = { git = "https://github.com/czzmmc/simple_asn1.git" }
pem = { git = "https://github.com/czzmmc/pem-rs.git", optional = true }
digest = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
sha2 = { git = "https://github.com/mesalock-linux/hashes-sgx" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.zeroize]
version = "1.1.0"
features = ["alloc", "zeroize_derive"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0.99"
git = "https://github.com/mesalock-linux/serde-sgx"

[dev-dependencies]
# base64 = "0.12.0"
# hex = "0.4.0"
# serde_test = "1.0.89"
# rand_xorshift = "0.2.0"
# pem = "0.8"
# sha-1 = "0.9.0"
# sha3 = "0.9.0"

[[bench]]
name = "key"

[profile.release]
# debug = true

[profile.bench]
# debug = true

[features]
default = ["pem", "mesalock_sgx"]
nightly = ["subtle/nightly", "num-bigint/nightly"]
serde = ["num-bigint/serde", "serde_crate"]
serde1 = ["serde_crate"] # deprecated
expose-internals = []
mesalock_sgx = ["sgx_tstd"]
